[project]
name = "test-assistx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.123.0",
    "langchain-google-genai>=3.2.0",
    "langgraph>=1.0.4",
    "pytest>=9.0.1",
    "uvicorn>=0.38.0",
]
